seekwellness.com (archived on 2013-12-24)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": true,
  "categories": "business",
  "char_count": 15769,
  "classifier_probability": 1.0,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 11.35,
  "homepage_snapshot_redirected_domain": "seekwellness.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20131009090650id_/http://www.seekwellness.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20131009090650id_/http%3A//seekwellness.com",
  "interval": "2013_B",
  "link_text": "Privacy",
  "parked_domain": false,
  "phase": "B",
  "policy_domain": "seekwellness.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20131224162854id_/http%3A//www.seekwellness.com/info/privacy_statement.htm",
  "policy_title": "privacy policy",
  "policy_url": "seekwellness.com/info/privacy_statement.htm",
  "sha1": "0a79c53ea7f697fa55913a1e8bfecead28dbe956",
  "simhash": 5084809140127093393,
  "simhash_updated": false,
  "site_hostname": "seekwellness.com",
  "site_url": "http://seekwellness.com",
  "smog": 13.35,
  "strict_updated": true,
  "timestamp": "20131224162854",
  "word_count": 2581,
  "year": 2013
}

--- a/s/se/see/seekwellness.com.html
+++ b/s/se/see/seekwellness.com.html
@@ -1,16 +1,17 @@
-<!--The following is the downloaded HTML source of the seekwellness.com privacy policy that was archived on 2013-05-28.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130528181818id_/http%3A//www.seekwellness.com/info/privacy_statement.htm) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the seekwellness.com privacy policy that was archived on 2013-12-24.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131224162854id_/http%3A//www.seekwellness.com/info/privacy_statement.htm) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns:fb="http://ogp.me/ns/fb#"><head>
 		<meta http-equiv="Content-Type" content="text/html;charset=ISO-8859-1">
-		<meta name="keywords" content="">
-	<meta name="description" content="SeekWellness Privacy Statement">
+		<meta name="keywords" content="SeekWellness, privacy">
+	<meta name="description" content="<p>SeekWellness Privacy Statement: What SeekWellness does to protect your privacy while on its website.</p>">
 	<link rel="canonical" href="http://www.seekwellness.com/info/privacy_statement.htm">
 		<link href="http://www.seekwellness.com/common/sitewide.css" rel="stylesheet" type="text/css">
 	<link href="http://www.seekwellness.com/common/print.css" media="print" rel="stylesheet" type="text/css">
 			<script src="https://secure.quantserve.com/quant.js" async="" type="text/javascript"></script><script type="text/javascript" async="" src="https://apis.google.com/js/plusone.js"></script><script id="twitter-wjs" src="//platform.twitter.com/widgets.js"></script><script id="facebook-jssdk" src="//connect.facebook.net/en_US/all.js#xfbml=1"></script><script src="http://www.seekwellness.com/javascript/prototype-compressed.js" type="text/javascript" language="Javascript"> </script>
 	<script src="http://www.seekwellness.com/javascript/scriptaculous-compressed.js" type="text/javascript" language="Javascript"> </script>
 	<script src="http://www.seekwellness.com/common/layout.js" type="text/javascript" language="Javascript"> </script>
+	<script src="http://www.seekwellness.com/common/more-content.js" type="text/javascript" language="Javascript"> </script>
 	<script type="text/javascript">
    		// <![CDATA[
 			Event.observe(document, 'dom:loaded', function() {
@@ -40,7 +41,6 @@
 	<meta name="revisit-after" content="1 days">
 	<meta name="Rating" content="General">
 	<meta name="Language" content="en">
-	<meta http-equiv="content-language" content="en-us">
 	<meta name="distribution" content="Global">
 	<meta name="Copyright" content="© 2013">
 	<meta name="Classification" content="Health">
@@ -53,14 +53,7 @@
 </head>
 
 <body>
-<div id="fb-root"></div>
-<script>(function(d, s, id) {
-  var js, fjs = d.getElementsByTagName(s)[0];
-  if (d.getElementById(id)) return;
-  js = d.createElement(s); js.id = id;
-  js.src = "//connect.facebook.net/en_US/all.js#xfbml=1";
-  fjs.parentNode.insertBefore(js, fjs);
-}(document, 'script', 'facebook-jssdk'));</script><script type="text/javascript">
+<script type="text/javascript">
 var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
 document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
 </script><script src="https://ssl.google-analytics.com/ga.js" type="text/javascript"></script>
@@ -68,7 +61,15 @@ document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.
 try {
 var pageTracker = _gat._getTracker("UA-291200-1");
 pageTracker._trackPageview();
-} catch(err) {}</script><div id="logo">
+} catch(err) {}</script><div id="fb-root"></div>
+<script>(function(d, s, id) {
+  var js, fjs = d.getElementsByTagName(s)[0];
+  if (d.getElementById(id)) return;
+  js = d.createElement(s); js.id = id;
+  js.src = "//connect.facebook.net/en_US/all.js#xfbml=1";
+  fjs.parentNode.insertBefore(js, fjs);
+}(document, 'script', 'facebook-jssdk'));</script>
+<div id="logo">
 	<div id="login" class="noPrint">
 		<a onmouseover="showlogin();" href="#" id="signinLink">Sign In</a> &nbsp; | &nbsp; <a href="http://www.seekwellness.com/mystore/index.php?register=yes">Become a Member</a>
 		<div id="loginbox" style="display:none;">
@@ -101,124 +102,19 @@ Information courtesy of SeekWellness.com<br>
 http://www.seekwellness.com/privacy_statement.htm</div>
 
 <div style="height:10px;clear:right;" class="noPrint">&nbsp;</div>
-<a id="link1" onclick="javascript:showTab('1');" class="tablinks tablink1 noPrint">Related Articles</a>
-<a id="link2" onclick="javascript:showTab('2');" class="tablinks tablink2 linkOff noPrint">More About Info</a>
-<a id="link3" onclick="javascript:showTab('3');" class="tablinks tablink3 linkOff noPrint">Helpful Products</a>
-<br>
+<img src="http://www.seekwellness.com/images/you-are-here.gif" style="float:left;" alt="you are viewing info"><h3 class="location"> &nbsp;  info</h3>
 
-<div id="articleTab1" class="tabs noPrint">
-<img src="http://www.seekwellness.com/images/you-are-here.gif" style="float:left;"><h3 class="location"> &nbsp;  info</h3>
-<ul class="relatedLinks half clearL">
-	<li><a href="wellness-partners-editorial-board.htm">wellness partners editorial board</a></li>
-	<li><a href="work-opportunities.htm">work opportunities at Seek Wellness, LLC</a></li>
-	<li><a href="editorial_policy.htm">editorial and advertising policy</a></li>
-	<li><a href="about.htm">what is SeekWellness.com?</a></li>
-	<li><a href="clients.htm">our clients</a></li>
-	<li><a href="awards.htm">awards</a></li>
-</ul>
-<ul class="relatedLinks half">
-	<li class="selected"><a href="privacy_statement.htm">privacy policy</a></li>
-	<li><a href="disclaimer.htm">terms and conditions</a></li>
-	<li><a href="links.htm">links</a></li>
-	<li><a href="widgets.htm">SeekWellness widgets</a></li>
-	<li><a href="smiley_file.htm">smiley file</a></li>
-</ul>
-<br style="clear:both;"> </div><div id="articleTab2" class="tabs hideTab">
-<ul class="relatedLinks half clearL">
-			<li><a href="http://www.seekwellness.com/info/nursingce-assessment-bladder-bowel.htm">continuing nursing education</a></li>
-	</ul>
-<ul class="relatedLinks half">
-</ul>
 
-<br style="clear:both;">
-<a href="http://www.seekwellness.com/featured-products.htm" class="tinyarrow">other featured products</a>
-</div>
-<div id="articleTab3" class="tabs hideTab noPrint">
-<!-- helpful products //-->
-<table border="0" cellspacing="18" cellpadding="0">
-	<tbody><tr>
-	<td>
-		<a href="http://www.seekwellness.com/LPs/wicker-warmup-towels.htm"><img src="http://www.seekwellness.com/mystore/products_pictures/product_wicking_swim%20tn.jpg" border="0"></a>
-	</td>
-	<td>
-		<h3 class="noSpace">Wick-er Warmup Towels</h3>
-		Wicker Warm-up towels kill bacteria because they contain silver in the fiber. These anti-bacterial towels are odor free and machine-washable. And the anti-bacterial technology is permanent, it doesn't wash out!<br>
-		<a href="http://www.seekwellness.com/LPs/wicker-warmup-towels.htm">Learn more</a>
-	</td>
-	</tr>
-</tbody></table>
+<div id="moreInfo"><span>Need more info?</span>
+	<a onclick="loadMoreInfoContent('related', '76');" rel="nofollow">related articles</a>	<a onclick="loadSubcatContent('76', '25');" rel="nofollow">related topics</a>		<a onclick="loadMoreInfoContent('products', '25');" rel="nofollow">helpful products</a></div>
 
-<br style="clear:both;">
-<a href="http://www.seekwellness.com/featured-products.htm" class="tinyarrow">other featured products</a>
-</div>
-
-<script language="Javascript" type="text/javascript">
-function showTab(num) {
-	if ($('articleTab1').hasClassName('hideTab') == false) { var currentTab = '1'; }
-	if ($('articleTab2').hasClassName('hideTab') == false) { var currentTab = '2'; }
-	if ($('articleTab3').hasClassName('hideTab') == false) { var currentTab = '3'; }
-	if (currentTab != num) 
-	{
-		if (num == 1) 
-		{
-			$('articleTab1').removeClassName('hideTab');
-			if ($('articleTab2').hasClassName('hideTab') == false) {
-				$('articleTab2').addClassName('hideTab'); 
-			}
-			if ($('articleTab3').hasClassName('hideTab') == false) {
-				$('articleTab3').addClassName('hideTab'); 
-			}
-			$('link1').removeClassName('linkOff');
-			if ($('articleTab2').hasClassName('linkOff') == false) {
-				$('link2').addClassName('linkOff'); 
-			}
-			if ($('articleTab3').hasClassName('linkOff') == false) {
-				$('link3').addClassName('linkOff'); 
-			}
-		}
-		if (num == 2)
-		{
-			$('articleTab2').removeClassName('hideTab');
-			if ($('articleTab1').hasClassName('hideTab') == false) {
-				$('articleTab1').addClassName('hideTab'); 
-			}
-			if ($('articleTab3').hasClassName('hideTab') == false) {
-				$('articleTab3').addClassName('hideTab'); 
-			}
-			$('link2').removeClassName('linkOff');
-			if ($('articleTab1').hasClassName('linkOff') == false) {
-				$('link1').addClassName('linkOff'); 
-			}
-			if ($('articleTab3').hasClassName('linkOff') == false) {
-				$('link3').addClassName('linkOff'); 
-			}
-		}
-		if (num == 3)
-		{
-			$('articleTab3').removeClassName('hideTab');
-			if ($('articleTab1').hasClassName('hideTab') == false) {
-				$('articleTab1').addClassName('hideTab'); 
-			}
-			if ($('articleTab2').hasClassName('hideTab') == false) {
-				$('articleTab2').addClassName('hideTab'); 
-			}
-			$('link3').removeClassName('linkOff');
-			if ($('articleTab2').hasClassName('linkOff') == false) {
-				$('link2').addClassName('linkOff'); 
-			}
-			if ($('articleTab1').hasClassName('linkOff') == false) {
-				$('link1').addClassName('linkOff'); 
-			}
-		}
-	}	
-}
-</script>
+<div id="moreInfoContent" class="hideme"></div>
 
 <!-- google_ad_section_start -->
 <div id="SocialSharing">
 <br><br>
 <table style="margin-top:12px;" align="center">
-<tbody><tr><td>	
+<tbody><tr><td>
 <!-- twitter tweet button //-->
 <a href="https://twitter.com/share" class="twitter-share-button" data-lang="en" data-related="seekwellness" data-count="none">Tweet</a>
 <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script></td><td>
@@ -233,18 +129,18 @@ function showTab(num) {
   })();
 </script></td><td>
 <!-- Facebook Share //-->
-<fb:like href="http://www.seekwellness.com/info/privacy_statement.htm" send="true" layout="button_count" width="155" show_faces="false" font="verdana"></fb:like></td></tr>
-</tbody></table>
-</div><h1 class="title">privacy policy</h1>
+<fb:like href="http://www.seekwellness.com/info/privacy_statement.htm" send="true" layout="button_count" width="155" show_faces="false" font="verdana"></fb:like></td></tr></tbody></table>
+<table align="center">
+<tbody><tr><td></td><td><a href="http://www.copyscape.com/web-copyright-protection/" target="_blank"><img src="http://www.seekwellness.com/images/cs-wh-234x16.gif" alt="Protected by Copyscape Web Copyright Protection Software" title="Protected by Copyscape Plagiarism Checker - Do not copy content from this page." width="176" height="12" border="0"></a></td>
+</tr></tbody></table>
+</div><h1 class="title clearL">Your Privacy at SeekWellness </h1>
 
 <!-- L: 4 //-->
 <div id="content">
-<p>Your Privacy at SeekWellness 
-</p><p><b>How to Protect the Privacy of Your Health Information</b> 
-</p><p>Jump to: <a href="#resources">Privacy Resources for Consumers</a> 
-</p><p>Q. <b>Do you know where your health information is going?</b> 
-</p><p>A. When you register at and then log in to a health website, any information you provide may be stored by the owners of the website. In some cases, this information is traceable to your email address or your IP address and is available for sale or trade by the original website to other companies interested in marketing to people with your profile. Your IP address is the unique number assigned to your computer when it's connected to the Internet. Your job is to discover what happens to the information collected along with your address. 
-</p><div class="noPrint adborder noSpace boxAdWidth adRight"><script type="text/javascript"><!--
+<p><strong>How to Protect the Privacy of Your Health Information</strong></p>
+<p>Jump to: <a href="#resources">Privacy Resources for Consumers</a></p>
+<p>Q. <strong>Do you know where your health information is going?</strong></p>
+<p>A. When you register at and then log in to a health website, any information you provide may be stored by the owners of the website. In some cases, this information is traceable to your email address or your IP address and is available for sale or trade by the original website to other companies interested in marketing to people with your profile. Your IP address is the unique number assigned to your computer when it's connected to the Internet. Your job is to discover what happens to the information collected along with your address.</p><div class="noPrint adborder noSpace boxAdWidth adRight"><script type="text/javascript"><!--
 google_ad_client = "ca-pub-8847612572182071";
 /* 336x280ATF Info */
 google_ad_slot = "8387813055";
@@ -331,12 +227,14 @@ google_ad_height = 280;
 
 <div id="left" class="noPrint">
 <div style="margin:0px 0px 5px 0px;padding-left:5px;">
-<!-- Facebook Badge START -->
-<fb:like-box href="http://www.facebook.com/SeekWellness" width="160" show_faces="true" stream="false" header="false"></fb:like-box><br>
+<!-- Facebook Recommendations START //-->
+<div class="fb-recommendations" data-site="http://www.seekwellness.com" data-width="160" data-height="300" data-header="true" data-font="arial"></div>
+<br>
 <div style="height:5px;">&nbsp;</div>
 <!-- twitter follow button //-->
 <a href="https://twitter.com/seekwellness" class="twitter-follow-button" data-show-count="false" data-lang="en">Follow @seekwellness</a>
-<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script></div>
+<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+</div>
 <div class="adborder noSpace vertAdWidth">
 <script type="text/javascript"><!--
 google_ad_client = "pub-8847612572182071";
@@ -416,7 +314,7 @@ function SwlBgCloseHelp()
 
 <div id="footer" class="noPrint">
 <div style="float:right;text-align:right;">
-<a href="http://www.seekwellness.com/info/disclaimer.htm">Terms &amp; Conditions</a> &nbsp;&nbsp;&nbsp;
+<a href="http://www.seekwellness.com/info/disclaimer.htm">Terms &amp; Conditions</a> &nbsp;&nbsp;&nbsp; 
 <a href="http://www.seekwellness.com/info/privacy_statement.htm">Privacy</a> &nbsp;&nbsp;&nbsp;
 <a href="http://www.seekwellness.com/info/about.htm">About Us</a> &nbsp;&nbsp;&nbsp;
 <a href="http://www.seekwellness.com/info/wellness-partners-editorial-board.htm">Editorial Board</a> &nbsp;&nbsp;&nbsp;
@@ -429,12 +327,12 @@ function SwlBgCloseHelp()
 </div>
 	© 2013 Seek Wellness LLC<br>
 	<p style="clear:both;"><br>Seek Wellness is a leader in the development of targeted health care information on the Internet. Specializing in pelvic health and wellness information and backed by leading healthcare professionals, Seek Wellness develops and implements consumer-oriented programs and services.</p>
-	<p align="center">Seek Wellness LLC · 237 Old Tilton Road · Canterbury, NH 03224 · Phone: 603 783-5677</p>
+	<p align="center">Seek Wellness LLC · 75 South Main Street, Unit 7, PMB #162 · Concord, NH 03301 · Phone: 603 783-5677</p>
 </div>
 
 <div style="float:right;padding-top:12px;" class="noPrint">
 <!-- GeoTrust QuickSSL [tm] Smart Icon tag. Do not edit. -->
-<span id="siteseal"><script type="text/javascript" src="https://seal.starfieldtech.com/getSeal?sealID=vXWRZNKOiCLwBpk0Rs6LTTah3xzxpI8rOMLnV2Oek8zW4g8xk13ilz9nC"></script></span>
+<script language="JavaScript" type="text/javascript" src="//smarticon.geotrust.com/si.js"></script>
 <!-- end GeoTrust Smart Icon tag -->
 </div>
 
@@ -444,10 +342,11 @@ function SwlBgCloseHelp()
 </div>
 
 <div style="float:left;padding-top:12px;" class="noPrint">
-<!-- (c) 2005, 2013. Authorize.Net is a registered trademark of CyberSource Corporation --> <div class="AuthorizeNetSeal"> <script type="text/javascript" language="javascript">var ANS_customer_id="1d3820e7-9203-458d-a0e8-96f9fb6d09a2";</script> <script type="text/javascript" language="javascript" src="//verify.authorize.net/anetseal/seal.js"></script> <a href="http://www.authorize.net/" id="AuthorizeNetText" target="_blank">Online Payments</a> </div>
+<!-- (c) 2006. Authorize.Net is a registered trademark of Lightbridge, Inc. -->
+<div class="AuthorizeNetSeal"> <script type="text/javascript" language="javascript">var ANS_customer_id="1d3820e7-9203-458d-a0e8-96f9fb6d09a2";</script> <script type="text/javascript" language="javascript" src="//VERIFY.AUTHORIZE.NET/anetseal/seal.js"></script> <a href="http://www.authorize.net/" id="AuthorizeNetText" target="_blank">Online Payments</a> </div> 
 </div>
 
-<div align="center" class="noPrint">
+<div align="center" class="noPrint">	
 <table cellspacing="2" cellpadding="2" border="0" style="margin-top:12px;"><tbody><tr><td>
 <a href="https://www.healthonnet.org/HONcode/Conduct.html?HONConduct386291" onclick="window.open(this.href); return false;"> <img src="http://www.honcode.ch/HONcode/Seal/HONConduct386291_s.gif" hspace="2" vspace="2" align="left" width="49" height="72" style="border:0px" title="This website is certified by Health On the Net Foundation. Click to verify." alt="This website is certified by Health On the Net Foundation. Click to verify."></a> </td><td align="left" width="160"><font size="1">
 		 This site complies with the <a href="http://www.healthonnet.org/HONcode/Conduct.html" onclick="window.open(this.href); return false;"> HONcode standard for trustworthy health</a> information:<br>
