--- a/d/do/dos/dosgamesarchive.com.html
+++ b/d/do/dos/dosgamesarchive.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the dosgamesarchive.com privacy policy that was archived on 2013-06-02.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130602223538id_/http%3A//www.dosgamesarchive.com/privacy-policy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the dosgamesarchive.com privacy policy that was archived on 2013-12-24.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131224171351id_/http%3A//www.dosgamesarchive.com/privacy-policy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en"><head>
 <title>Privacy policy | DOS Games Archive</title>
@@ -10,18 +10,15 @@
 <meta name="verify-v1" content="th+ikDlARWHFr25SYdMjrbjeZ1f3Mre0i3marLyD9PU=">
 <meta http-equiv="X-UA-Compatible" content="IE=Edge">
 <link rel="shortcut icon" href="/favicon.ico">
+<link rel="stylesheet" type="text/css" media="screen" href="/layout/photoswipe.css">
 <link rel="stylesheet" type="text/css" media="screen" href="/layout/screen.css">
 <link rel="stylesheet" type="text/css" media="print" href="/layout/print.css">
-<link rel="stylesheet" type="text/css" href="/layout/prettyphoto.css" charset="utf-8">
+<script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
 <script type="text/javascript" src="/javascript/swfobject.js"></script>
-<script type="text/javascript" src="/javascript/years.js"></script>
-<script type="text/javascript" src="/javascript/gamegroups.js"></script>
-<script type="text/javascript" src="/javascript/jquery-1.3.2.min.js"></script>
 <script type="text/javascript" src="/javascript/jquery.cycle.lite.min.js"></script>
-<script type="text/javascript" src="/javascript/jquery.cycle-settings.js"></script>
-<script type="text/javascript" src="/javascript/jquery.pngfix.js"></script>
-<script type="text/javascript" src="/javascript/jquery.pngfix-settings.js"></script>
-<script type="text/javascript" src="/javascript/jquery.prettyphoto.js" charset="utf-8"></script>
+<script type="text/javascript" src="/javascript/klass.min.js"></script>
+<script type="text/javascript" src="/javascript/photoswipe.3.0.5.min.js"></script>
+<script type="text/javascript" src="/javascript/settings.js"></script>
 </head>
 <body>
 
@@ -30,12 +27,20 @@
 <div id="leaderboard">
 <div id="leaderboard_container">
 <div id="leaderboard_banner">
-<a href="http://www.gog.com/en/gamecard/gabriel_knight_sins_of_the_fathers?pp=35e995c107a71caeb833bb3b79f9f54781b33fa1" target="_blank"><img src="http://image.dosgamesarchive.com/banners/gog-com/gabriel-knight/gk-728x90.jpg" width="728" height="90" alt="Buy Gabriel Knight from GOG.com"></a>
+<script type="text/javascript">
+<!--
+google_ad_client = "pub-2163211752314164";
+google_ad_slot   = "0342628924";
+google_ad_width  = 728;
+google_ad_height = 90;
+//-->
+</script>
+<script type="text/javascript" src="http://pagead2.googlesyndication.com/pagead/show_ads.js"></script>
 </div>
 <div id="leaderboard_randomgame">
 <div id="randomgame_title"><h3>Random</h3>
-<p><a href="/download/ms-pac-pc/">Ms Pac PC</a></p></div>
-<div id="randomgame_screenshot" style="background-image: url(http://image.dosgamesarchive.com/screenshots/thumbnails/mspacpc2.gif);"><a href="/download/ms-pac-pc/"><img src="http://image.dosgamesarchive.com/randomgame.gif" width="128" height="96" alt="Ms Pac PC"></a></div>
+<p><a href="/download/super-street-fighter-ii-turbo/">Super Street Fighter II Turbo</a></p></div>
+<div id="randomgame_screenshot" style="background-image: url(http://image.dosgamesarchive.com/screenshots/thumbnails/streetfighter2.gif);"><a href="/download/super-street-fighter-ii-turbo/"><img src="http://image.dosgamesarchive.com/randomgame.gif" width="128" height="96" alt="Super Street Fighter II Turbo"></a></div>
 <div class="clear"><!-- --></div>
 </div>
 <div class="clear"><!-- --></div>
@@ -46,7 +51,7 @@
 
 <div id="header">
 <div id="header_logo"><h1><a href="/"><img src="http://image.dosgamesarchive.com/logo_dosgamesarchive.gif" width="318" height="53" alt="DOS Games Archive"></a></h1></div>
-<div id="header_screenshot"><div class="slideshow"><img src="http://image.dosgamesarchive.com/header/screenshot14.jpg" width="640" height="105" alt="Game screenshot"><img src="http://image.dosgamesarchive.com/header/screenshot22.jpg" width="640" height="105" alt="Game screenshot"><img src="http://image.dosgamesarchive.com/header/screenshot38.jpg" width="640" height="105" alt="Game screenshot"></div></div>
+<div id="header_screenshot"><div class="slideshow"><img src="http://image.dosgamesarchive.com/header/screenshot4.jpg" width="640" height="105" alt="Game screenshot"><img src="http://image.dosgamesarchive.com/header/screenshot8.jpg" width="640" height="105" alt="Game screenshot"><img src="http://image.dosgamesarchive.com/header/screenshot14.jpg" width="640" height="105" alt="Game screenshot"></div></div>
 <div class="clear"><!-- --></div>
 </div>
 
@@ -233,7 +238,6 @@ google_ad_height = 280;
 <option value="/year/2003/">2003</option>
 <option value="/year/2012/">2012</option>
 </select><br>
-<input type="button" value="Display" onclick="javascript:formYears(this);" class="button">
 </div>
 </form>
 </div>
@@ -263,7 +267,6 @@ google_ad_height = 280;
 <option value="/gamegroup/theme/">Theme</option>
 <option value="/gamegroup/warcraft/">WarCraft</option>
 </select><br>
-<input type="button" value="Display" onclick="javascript:formGamegroups(this);" class="button">
 </div>
 </form>
 </div>
@@ -282,17 +285,7 @@ google_ad_height = 280;
 
 <div id="banner_buttons_quote">
 <div id="banner">
-<script type="text/javascript">
-<!--
-rnum=Math.round(Math.random() * 100000);
-ts=String.fromCharCode(60);
-if (window.self != window.top) {nf=''} else {nf='NF/'};
-document.write(ts+'script src="http://www.burstnet.com/cgi-bin/ads/ad7229a.cgi/v=2.3S/sz=468x60B/'+rnum+'/'+nf+'RETURN-CODE/JS/">'+ts+'/script>');
-//-->
-</script><script src="http://www.burstnet.com/cgi-bin/ads/ad7229a.cgi/v=2.3S/sz=468x60B/27270/NF/RETURN-CODE/JS/"></script>
-<noscript>
-<a href="http://www.burstnet.com/ads/ad7229a-map.cgi/ns/v=2.3S/sz=468x60B/" target="_top"><img src="http://www.burstnet.com/cgi-bin/ads/ad7229a.cgi/ns/v=2.3S/sz=468x60B/" width="468" height="60" alt="Click here" border="0"/></a>
-</noscript>
+<a href="http://www.gog.com/en/gamecard/fallout?pp=35e995c107a71caeb833bb3b79f9f54781b33fa1" target="_blank"><img src="http://image.dosgamesarchive.com/banners/gog-com/fallout/468x60.jpg" width="468" height="60" alt="Buy Fallout from GOG.com"></a>
 </div>
 <div id="buttons_quote">
 <div id="buttons">
@@ -303,8 +296,8 @@ document.write(ts+'script src="http://www.burstnet.com/cgi-bin/ads/ad7229a.cgi/v
 <div class="clear"><!-- --></div>
 </div>
 <div id="quote">
-<blockquote>"I like writing good programs - ones that bring new capabilities to people and hit the engineering 'sweet spots' as best they can."<br>
-<strong>John Carmack (id Software)</strong></blockquote>
+<blockquote>"In terms of multiplayer, Descent was the first game to work well over the Internet."<br>
+<strong>Matt Toschlog (Outrage)</strong></blockquote>
 </div>
 <div class="clear"><!-- --></div>
 </div>
