--- a/e/eb/eba/ebayenterprise.com.html
+++ b/e/eb/eba/ebayenterprise.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the ebayenterprise.com privacy policy that was archived on 2013-06-25.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130625011350id_/http%3A//www.ebayenterprise.com/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the ebayenterprise.com privacy policy that was archived on 2013-12-24.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131224173515id_/http%3A//ebayenterprise.com/privacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html><head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
@@ -9,7 +9,7 @@
 <meta name="robots" content="index, follow">
 <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
 <link href="/_css/style.css" type="text/css" rel="stylesheet">
-<script src="/_scripts/jquery.min.js" type="text/javascript"></script>
+<link href="/_css/header_20130930.css" type="text/css" rel="stylesheet"><script src="/_scripts/jquery.min.js" type="text/javascript"></script>
 <script src="/_scripts/scripts.js" type="text/javascript"></script>
 </head>
 
@@ -22,9 +22,9 @@
 	<div id="colorbar-red"><div id="colorbar-green"><div id="colorbar-blue"></div></div></div>
     <!--end colorbar-->
 	<div id="masthead-content">
-    <div id="masthead-left"><a href="/"><img src="/_images/template/logo.png" width="220" height="101" alt="eBay Enterprise"></a></div>
+    <div id="masthead-left"><a href="/"><img src="/_images/template/logo-vert.png" width="185" height="85" alt="eBay Enterprise"></a></div>
 	<div id="masthead-right">
-        <div id="utility-nav">
+        <div id="utility-nav" style="margin-top:44px;">
         	<div id="utility-nav-menu">
 	    	    <a href="/international/">International</a>&nbsp;&nbsp;/&nbsp;&nbsp;<a href="/news_events/">News &amp; Events</a>&nbsp;&nbsp;/&nbsp;&nbsp;<a href="/careers/">Careers</a>&nbsp;&nbsp;/&nbsp;&nbsp;<a href="/contact/">Contact Us</a>&nbsp;&nbsp;/&nbsp;&nbsp;
 	        </div>
@@ -39,19 +39,18 @@
 	        </div>
 			</form>
 		</div>
-		<div id="primary-nav">
-        	<div id="primary-nav-menu">
-			<ul>
-            	<li><a href="/about/">About</a></li>
-				<li><a href="/commerce_technologies/">Commerce Technologies</a></li>
-				<li><a href="/omnichannel_operations/">Omnichannel Operations</a></li>
-				<li><a href="/marketing_solutions/">Marketing Solutions</a></li>
-				<li><a href="/clients/">Clients</a></li>
-				<li><a href="/blog/">Blog</a></li>
-			</ul>
-            </div>
-    	</div><!--primary-nav-->
     </div><!--masthead-right-->
+	<div id="primary-nav">
+			<ul id="primary-nav">
+            	<li><a href="/about/" class="about">About Us</a></li>
+				<li><a href="/commerce_technologies/" class="commerce-technologies">Commerce Technologies</a></li>
+				<li><a href="/omnichannel_operations/" class="omnichannel-operations">Omnichannel Operations</a></li>
+				<li><a href="/marketing_solutions/" class="marketing-solutions">Marketing Solutions</a></li>
+				<li><a href="/alliance_network/" class="alliance-network">Alliance Network</a></li>
+				<li><a href="/clients/" class="clients">Clients</a></li>
+				<li><a href="/commersations/" class="resources">Resources</a></li>
+			</ul>
+    	</div>
     </div><!--masthead-content-->
 </div><!--masthead--><div id="titlebar">
 	<div id="titlebar-content">
@@ -67,6 +66,7 @@
 		<ul>
 			<li class="current"><a href="/privacy/">Privacy</a></li>
 		  <li><a href="web_site_privacy.php">Web Site Privacy Statement</a></li>
+			<li><a href="services_privacy.php">Services Privacy Statement</a></li>
 			<li><a href="safe_harbor_privacy.php">Safe Harbor Privacy Statement</a></li>
 		</ul>
 		</div>
@@ -77,14 +77,15 @@
 <p>The following privacy statements address our information collection practices with respect to certain types of information that we receive: </p>
 <ul>
   <li><a href="web_site_privacy.php" class="bold">The Web Site Privacy Statement</a> addresses the types of information gathered through this Web site, <a href="/">www.ebayenterprise.com</a>, how such information is used, and with whom such information is shared.</li>
+  <li><a href="services_privacy.php"><strong>The Services Privacy Statement</strong></a> addresses&nbsp;our  collection, use, storage, sharing, and protection of your personal information  in connection with our targeted display advertising services.</li>
   <li><a href="safe_harbor_privacy.php" class="bold">The Safe Harbor Privacy Statement</a> addresses how we collect, use, and disclose personally identifiable information that we receive in the United States from the European Union and Switzerland.</li>
 </ul>
     </div>
 	<!--main-content-->
 	<div id="main-right">
-        <a href="http://clicktoverify.truste.com/pvr.php?page=validate&amp;url=www.ebayenterprise.com&amp;sealid=103" target="_blank"><img src="/privacy/images/TRUSTe_click_to_verify.gif" width="64" height="95" alt="TRUSTe Click to Verify"></a><br><br>
-        <a href="http://clicktoverify.truste.com/pvr.php?page=validate&amp;url=www.ebayenterprise.com&amp;sealid=103" target="_blank"><img src="/privacy/images/TRUSTe_certified_privacy.gif" width="171" height="47" alt="TRUSTe Certified Privacy"></a><br><br>
-        <a href="http://clicktoverify.truste.com/pvr.php?page=validate&amp;url=www.ebayenterprise.com&amp;sealid=103" target="_blank"><img src="/privacy/images/TRUSTe_safe_harbor_seal.gif" width="165" height="47" alt="TRUSTe EU Safe Harbor"></a><br><br>
+        <!--<a href="http://clicktoverify.truste.com/pvr.php?page=validate&amp;url=www.ebayenterprise.com&amp;sealid=103" target="_blank"><img src="/privacy/images/TRUSTe_click_to_verify.gif" width="64" height="95" alt="TRUSTe Click to Verify" /></a><br /><br />
+        <a href="http://clicktoverify.truste.com/pvr.php?page=validate&amp;url=www.ebayenterprise.com&amp;sealid=103" target="_blank"><img src="/privacy/images/TRUSTe_certified_privacy.gif" width="171" height="47" alt="TRUSTe Certified Privacy" /></a><br /><br />
+        <a href="http://clicktoverify.truste.com/pvr.php?page=validate&amp;url=www.ebayenterprise.com&amp;sealid=103" target="_blank"><img src="/privacy/images/TRUSTe_safe_harbor_seal.gif" width="165" height="47" alt="TRUSTe EU Safe Harbor" /></a><br /><br />-->
         <p><a href="https://safeharbor.export.gov/list.aspx" target="_blank" style="font-size:9px; font-family:Arial, Helvetica, sans-serif">We self-certify compliance with</a><br>
             <a href="http://www.export.gov/safeharbor/" target="_blank"><img src="/privacy/images/safe_harbor.gif" width="149" height="61" alt="US EU Safe Harbor" style="margin-top:10px;"></a></p>
 	</div><!--main-right-->
@@ -100,6 +101,7 @@
 		<div id="footer-links">
 			<a href="/contact/index.php">Contact Us</a>&nbsp;&nbsp;/&nbsp;&nbsp;<a href="/legal_notices.php">Legal Notices</a>&nbsp;&nbsp;/&nbsp;&nbsp;<a href="/privacy/">Privacy</a>&nbsp;&nbsp;/&nbsp;&nbsp;<a href="/search/">Search</a>&nbsp;&nbsp;/&nbsp;&nbsp;<a href="/search/sitemap.php">Site Map</a>
 		</div><!--footer-links-->
+		<div style="float:right;">
         <div id="footer-findus">
         	Find us elsewhere:&nbsp;&nbsp;
 		</div><!--footer-findus-->
@@ -111,11 +113,12 @@
             <a href="http://twitter.com/eBayEnterprise" class="social-twitter" target="_blank">Follow us on Twitter</a>
             </div>
         	<div class="icon" style="margin:0;">
-            <a href="http://www.linkedin.com/company/gsi-commerce" class="social-linkedin" target="_blank">Follow us on LinkedIn</a>
+            <a href="http://www.linkedin.com/company/ebay-enterprise" class="social-linkedin" target="_blank">Follow us on LinkedIn</a>
             </div>
 </div><!--footer-social-->
-        <div id="footer-copyright">
-        	Copyright © 2013 eBay Inc.  All rights reserved
+</div>
+        <div id="footer-copyright" style="width:940px;text-align:center;float:left;margin:10px 0 0 0;">
+			© 2013 eBay Enterprise, Inc. or its subsidiaries. All rights reserved. 
 		</div><!--footer-copyright-->
         <div style="clear:both;"></div>
     </div><!--footer-content-->
@@ -131,6 +134,6 @@ try {
 var pageTracker = _gat._getTracker("UA-8721228-1");
 pageTracker._trackPageview();
 } catch(err) {}</script>
-
+<iframe style="display:none;" src="http://pixel.fetchback.com/serve/fb/pdj?cat=&amp;name=landing&amp;sid=6276" scrolling="no" width="0" height="0" marginheight="0" marginwidth="0" frameborder="0"></iframe>
 
 <!-- GSI Commerce GOMEZ Test --></body></html>
