--- a/h/hi/hig/highend.com.html
+++ b/h/hi/hig/highend.com.html
@@ -1,20 +1,23 @@
-<!--The following is the downloaded HTML source of the highend.com privacy policy that was archived on 2013-05-20.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130520231055id_/http%3A//www.highend.com/privacy.asp) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the highend.com privacy policy that was archived on 2013-12-24.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131224184753id_/http%3A//www.highend.com/privacy.asp) for the most accurate reproduction.-->
 
 <html><head> 
 <title>Privacy Policy - High End Systems</title>
 <link rel="stylesheet" href="/jsscripts/fonts.css" type="text/css">
-<script language="javascript" src="/jsscripts/main.js"></script>
+<script async="" src="//www.google-analytics.com/analytics.js"></script><script language="javascript" src="/jsscripts/main.js"></script>
 </head>
 <body><center><a name="#top"></a>
-<script type="text/javascript">
-var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
-document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
-</script><script src="https://ssl.google-analytics.com/ga.js" type="text/javascript"></script>
-<script type="text/javascript">
-var pageTracker = _gat._getTracker("UA-931425-1");
-pageTracker._initData();
-pageTracker._trackPageview();
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+var pluginUrl = 
+ '//www.google-analytics.com/plugins/ga/inpage_linkid.js';
+_gaq.push(['_require', 'inpage_linkid', pluginUrl]);
+  ga('create', 'UA-45474239-1', 'highend.com');
+  ga('send', 'pageview');
+
 </script>
 <table cellpadding="0" cellspacing="0" width="808" border="0" id="header"><form action="/search.asp" id="searchbox_001433733235755873870:0b-01pxjtrg"></form>
 	<tbody><tr>
@@ -30,7 +33,13 @@ pageTracker._trackPageview();
 
 		<div><div style="width:140px;top:-14px;left:127px;"><ul style="">
 		<li><a href="/products/digital_lighting/ArenaView.asp">ArenaView Orbital Head</a></li>
-		<li><a href="/products/digital_lighting/axon.asp">Axon Media Server</a></li>
+		<li><a href="/products/digital_lighting/axon-new.asp">Axon Media Server</a>
+        
+			<div><div style="width:150px;top:-18px;left:88px;"><ul style="">
+			<li><a href="/products/digital_lighting/axon-hd.asp">AXON HD</a></li>
+            <li><a href="/products/digital_lighting/axon-hd-pro.asp">AXON HD Pro</a></li>
+			</ul></div></div></li>
+        
 		<li><a href="/products/digital_lighting/dl_3.asp">DL.3</a></li>
 		<li><a href="/products/digital_lighting/DL_3FDigitalLight.asp">DL.3F</a></li> 
        		<li><a href="/products/digital_lighting/DLV_DigitalLight.asp">DLV</a></li>
@@ -44,6 +53,7 @@ pageTracker._trackPageview();
 		<li><a href="/products/controllers/Hog4.asp">Hog 4</a></li>
 		<li><a href="/products/controllers/FullBoar4.asp">Full Boar 4</a></li>
 		<li><a href="/products/controllers/RoadHog4.asp">Road Hog 4</a></li>
+        <li><a href="/products/controllers/HedgeHog4.asp">Hedge Hog 4</a></li>
         <li><a href="/products/controllers/Nanowing.asp">Nano Hog 4</a></li>
 		<li><a href="/products/controllers/Hog4pc.asp">Hog 4PC</a></li>
 		</ul></div></div></li>
@@ -86,21 +96,23 @@ pageTracker._trackPageview();
 	<li><a href="/products/LED/">LED</a>
 
 		<div><div style="width:135px;top:-14px;left:127px;"><ul style="">
-		<li><a href="/products/LED/">Pixelation Luminaires</a>
+		<!--<li><a href="/products/LED/">Pixelation Luminaires</a>
 
 			<div><div style="width:175px;top:-14px;left:116px;"><ul style="">
-			<li><a href="/products/LED/pixelation_luminaires/showpix.asp">SHOWPIX™</a></li>
-   			<li><a href="/products/LED/pixelation_luminaires/studiopix.asp">StudioPix™</a></li>
-			</ul></div></div></li>
+			<li><a href="/products/LED/pixelation_luminaires/showpix.asp">SHOWPIX&trade;</a></li>
+   			<li><a href="/products/LED/pixelation_luminaires/studiopix.asp">StudioPix&trade;</a></li>
+			</ul></div></div></li> -->
 		<li><a href="">Moving Mirror</a>
 
 			<div><div style="width:150px;top:-18px;left:88px;"><ul style="">
-			<li><a href="/products/automated_luminaires/TrackspotBolt.asp">Trackspot Bolt</a></li>
+			<li><a href="/products/automated_luminaires/TrackspotBolt.asp">Trackspot Bolt (BTO)</a></li>
 			</ul></div></div></li>
 	    <li><a href="">Moving Yoke</a>
 
 			<div><div style="width:130px;top:-18px;left:88px;"><ul style="">
+            <li><a href="/products/LED/solaspot/SolaSpotProCMY.asp">SolaSpot™ Pro CMY</a></li>
 			<li><a href="/products/LED/solaspot/SolaSpotLED.asp">SolaSpot™ LED</a></li>
+            <li><a href="/products/LED/solawash/SolaWashLED.asp">SolaWash™ LED</a></li>
 			</ul></div></div></li>
 		
         </ul></div></div></li>
@@ -119,6 +131,7 @@ pageTracker._trackPageview();
 	<li><a href="/forums/">Forums</a></li>
 	<li><a href="/support/training/">Training</a></li>
 	<li><a href="/support/parts/">Service Parts</a></li>
+    <li><a href="/support/admin/commonforms.asp">Common Forms</a></li>
 	</ul></div></div></li>
 
 
