--- a/t/tw/twi/twiningsusa.com.html
+++ b/t/tw/twi/twiningsusa.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the twiningsusa.com privacy policy that was archived on 2013-06-24.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130624145947id_/http%3A//twiningsusa.com/footer-content.php%3Fid%3D4) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the twiningsusa.com privacy policy that was archived on 2013-12-24.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131224192355id_/http%3A//www.twiningsusa.com/footer-content.php%3Fid%3D4) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
@@ -100,7 +100,7 @@
       <li><a href="products.php?id=16">products</a>
         <ul id="products">
           <li class="item"><a href="http://www.twiningsusashop.com/our-offerings.html" target="_self">Our Offerings</a></li>
-          <li class="item"><a href="http://www.twiningsusashop.com/mixed-berries-cold-brewed.html" target="_self">Tea of the Month</a></li>
+          <!-- <li class="item"><a href="http://www.twiningsusashop.com/peach-cold-brewed.html" target="_self">Tea of the Month</a></li> -->
           <li class="item"><a href="http://www.twiningsusashop.com/whats-new.html" target="_self">What's New</a></li>
           <li class="item"><a href="http://www.twiningsusashop.com/specials.html" target="_self">Specials</a></li>
           <li class="last-item"><a href="tea-explorer.php">Tea Explorer</a></li>
