--- a/c/co/coc/cocoacontrols.com.html
+++ b/c/co/coc/cocoacontrols.com.html
@@ -1,11 +1,20 @@
-<!--The following is the downloaded HTML source of the cocoacontrols.com privacy policy that was archived on 2013-05-13.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130513192739id_/http%3A//www.cocoacontrols.com/privacy-policy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the cocoacontrols.com privacy policy that was archived on 2013-12-24.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131224225413id_/https%3A//www.cocoacontrols.com/privacy-policy) for the most accurate reproduction.-->
 
-<!DOCTYPE html><html><head><script src="https://dnn506yrbagrg.cloudfront.net/pages/scripts/0015/4502.js?439587" async="" type="text/javascript"></script><script type="text/javascript" async="" src="https://ssl.google-analytics.com/ga.js"></script><script type="text/javascript">var NREUMQ=NREUMQ||[];NREUMQ.push(["mark","firstbyte",new Date().getTime()]);</script>
+<!DOCTYPE html><html lang="en" style="" class=" js no-touch svg inlinesvg svgclippaths no-ie8compat"><!--<![endif]--><head><script src="https://dnn506yrbagrg.cloudfront.net/pages/scripts/0015/4502.js?439587" async="" type="text/javascript"></script><script type="text/javascript" async="" src="https://ssl.google-analytics.com/ga.js"></script><script type="text/javascript">var NREUMQ=NREUMQ||[];NREUMQ.push(["mark","firstbyte",new Date().getTime()]);</script>
 <title>Privacy Policy - Cocoa Controls</title>
 <meta name="description">
-<link href="/assets/application-f9fc41806e3971c0e5b87544071ac6d5.css" media="screen" rel="stylesheet" type="text/css">
-<script src="/assets/application-55c1b72946e41b2f43bf4936cc7f63df.js" type="text/javascript"></script>
+<meta charset="utf-8">
+<meta content="width=device-width, initial-scale=1.0" name="viewport">
+<link rel="apple-touch-icon" href="/images/iphone.png">
+<link rel="apple-touch-icon" sizes="72x72" href="/images/ipad.png">
+<link rel="apple-touch-icon" sizes="114x114" href="/images/iphone_retina.png">
+<link rel="apple-touch-icon" sizes="144x144" href="/images/ipad_retina.png">
+<link href="http://feeds.feedburner.com/cocoacontrols" id="auto-discovery" rel="alternate" title="Cocoa Controls - Newest" type="application/atom+xml">
+<link href="/assets/application-3a68c837ab31702ddbd2f34886e17c3c.css" media="screen" rel="stylesheet" type="text/css">
+<link href="//netdna.bootstrapcdn.com/font-awesome/3.2.0/css/font-awesome.css" media="screen" rel="stylesheet" type="text/css">
+<script src="/assets/vendor/custom.modernizr-a7d5258f68c42509cd151b5d3ebb9aa9.js" type="text/javascript"></script>
+<script src="/assets/application-11746d2959e316c8cb6b27610e980a2d.js" type="text/javascript"></script>
 <script async="true" src="https://store.cocoacontrols.com/dynamicscripts/ccstats-1.0.js" type="text/javascript"></script>
 <script src="https://store.cocoacontrols.com/Scripts/ccpolls-1.0.js" type="text/javascript"></script>
   <script type="text/javascript">
@@ -23,94 +32,101 @@
 
   </script>
 
-  <!-- Begin Inspectlet Embed Code -->
-  <script type="text/javascript" id="inspectletjs">
-  	var __insp = __insp || [];
-  	__insp.push(['wid', 1892649211]);
-  	(function() {
-  		var a = window.onload;
-  		function __ldinsp(){var insp = document.createElement('script'); insp.type = 'text/javascript'; insp.async = true; insp.id = "inspsync"; insp.src = ('https:' == document.location.protocol ? 'https' : 'http') + '://www.inspectlet.com/inspect/1892649211.js'; document.getElementsByTagName("head")[0].appendChild(insp); }
-  		window.onload = (typeof window.onload != 'function') ? __ldinsp : function() { a(); __ldinsp(); };
-  	})();
-  </script>
-  <!-- End Inspectlet Embed Code -->
-
-<meta content="initial-scale=1.0, user-scalable=no" name="viewport">
 <meta content="authenticity_token" name="csrf-param">
-<meta content="d1Z+sAfx3nTZtwz/EqDw7sPEPPaln/lFum6tjbbDth8=" name="csrf-token">
-<link href="http://feeds.feedburner.com/cocoacontrols" id="auto-discovery" rel="alternate" title="Cocoa Controls - Newest" type="application/atom+xml">
-<link rel="apple-touch-icon" href="/images/iphone.png">
-<link rel="apple-touch-icon" sizes="72x72" href="/images/ipad.png">
-<link rel="apple-touch-icon" sizes="114x114" href="/images/iphone_retina.png">
-<link rel="apple-touch-icon" sizes="144x144" href="/images/ipad_retina.png">
+<meta content="6rRbIwSqZSOIlioKLJO9HaUOlzmLyuRKMYMc+s40970=" name="csrf-token">
 
-<script type="text/javascript" async="" id="inspsync" src="https://www.inspectlet.com/inspect/1892649211.js"></script></head>
+</head>
 
-<body id="pages_privacy">
-<header>
-<div class="container">
+  <body id="pages_privacy" style="padding-top: 45px;">
+    <div class="hero-bar fixed" id="herobar">
+<button class="hero-bar-close-button close">×</button>
 <div class="row">
-<div class="span6" id="logo">
-<a href="/"><img alt="Cocoa Controls" height="105" src="/assets/logo@2x-fdf895c7c50f32558f708caea106c27d.png" width="240"></a>
+<div class="small-12 columns">
+<form class="newsletter_signup_form">
+<div class="row collapse center">
+<div class="small-12 large-5 columns">
+<label class="right inline">Receive our weekly roundup before it gets posted on the site!&nbsp;</label>
 </div>
-<div class="span6" id="login_controls"><p>
-<a href="/controls/new" class="submit_control_link">Submit a Control</a>
-<span>&nbsp;</span>
-<a href="/login">Log in via GitHub</a>
-</p>
-<p><a href="/faq">Frequently Asked Questions</a></p>
+<div class="small-10 large-5 columns">
+<input id="newsletter_email_address" name="newsletter_email_address" placeholder="Enter your email address" type="text" value="">
+</div>
+<div class="small-2 large-2 columns">
+<button autocomplete="off" class="postfix" data-loading-text="One moment...">Subscribe</button>
 </div>
 </div>
+</form>
 </div>
-</header>
-<div id="primary_navigation">
-<div class="container"><div class="row">
-<div class="span12">
-<div class="navbar navbar-static navbar-inverse" id="navbar">
-<div class="navbar-inner">
-<div class="container">
-<a class="btn btn-navbar" data-target=".nav-collapse" data-toggle="collapse">
-<span class="icon-bar"></span>
-<span class="icon-bar"></span>
-<span class="icon-bar"></span>
-</a>
-<a class="hidden-desktop brand">Navigate</a>
-<div class="nav-collapse">
-<ul class="nav">
-<li><a href="/">Home</a></li>
-<li><a href="/controls">Controls</a></li>
-<li><a href="/apps">Apps</a></li>
-<li><a href="/authors">Authors</a></li>
-<li><a href="/posts">Blog</a></li>
-<li><a href="/cocoapods">CocoaPods</a></li>
-<li><a href="/about">About</a></li>
+</div>
+
+</div>
+
+    <div class="fixed cc-navigation">
+<nav class="top-bar">
+<ul class="title-area">
+<li class="name">
+<h1><a href="/">Cocoa Controls</a></h1>
+</li>
+<li class="toggle-topbar menu-icon">
+<a href="#"><span>Menu</span>
+</a></li>
 </ul>
-<form accept-charset="UTF-8" action="/search" class="navbar-search pull-right" method="get"><div style="margin:0;padding:0;display:inline"><input name="utf8" type="hidden" value="✓"></div>
-<input class="search-query span2" name="q" placeholder="Search Controls" type="text">
+
+<section class="top-bar-section">
+<ul class="left">
+<li class="divider"></li>
+<li><a href="/controls">Controls</a></li>
+<li class="divider"></li>
+<li><a href="/apps">Apps</a></li>
+<li class="divider"></li>
+<li><a href="/authors">Authors</a></li>
+<li class="divider"></li>
+<li><a href="/posts">Blog</a></li>
+<li class="divider"></li>
+<li><a href="/cocoapods">CocoaPods</a></li>
+<li class="divider"></li>
+<li class="has-dropdown">
+<a href="/about">About</a>
+<ul class="dropdown"><li class="title back js-generated"><h5><a href="#">« Back</a></h5></li><li><a class="parent-link js-generated" href="/about">About</a></li>
+<li><a href="/faq">FAQ</a></li>
+</ul>
+</li>
+</ul>
+<ul class="right">
+<li class="divider hide-for-small"></li>
+<li class="has-button">
+<a href="#" class="button small primary submit_control_link">Submit Control</a>
+</li>
+<li class="has-form">
+<form accept-charset="UTF-8" action="/search" method="get"><div style="margin:0;padding:0;display:inline"><input name="utf8" type="hidden" value="✓"></div>
+<div class="row collapse">
+<div class="small-8 columns">
+<input name="q" placeholder="Search Controls" type="text">
+</div>
+<div class="small-4 columns">
+<button class="button">Search</button>
+</div>
+</div>
 </form>
 
-</div>
-</div>
-</div>
-</div>
-</div>
-</div>
-</div>
+</li>
+<li class="divider"></li>
+<li><a href="/login">Log in via GitHub</a></li>
+
+<li class="divider"></li>
+<li><a href="#" class="hero-bar-show-button" title="Show the newsletter signup form">↓</a></li>
+</ul>
+</section></nav>
 </div>
 
-<div class="container">
-<div class="row" id="flashes">
-<div class="span12">
-<div class="alert alert-info">You must be logged in to do this.</div>
-</div>
-</div>
 
-<div class="row" id="page_title">
-<div class="span12" id="in_page_title">
-<h1>Privacy Policy</h1>
-</div>
-</div>
-<h2>Legal Information</h2>
+      <div class="row in-page-title push-down">
+        <div class="small-12 columns">
+          <h1>Privacy Policy</h1>
+        </div>
+      </div>
+      
+
+    <h2>Legal Information</h2>
 <p>Cocoa Controls (which means here Cocoa Controls at Red Gate Software Limited) respects your privacy. We do not sell, rent or loan any identifiable information regarding our customers to any third party. Any information you give us is held with the utmost care and security.</p>
 <p>This privacy policy sets out our privacy practices. Please take time to review this privacy policy as it tells you how your personal information will be treated by us.</p>
 <p>Any questions regarding our privacy policy should be directed at info@cocoacontrols.com.</p>
@@ -164,63 +180,91 @@ Non personal information
 <h2>Contacting us</h2>
 <p>If at any time you would like to contact us with your views about our privacy practices, or with any enquiry relating to your personal information, you can do so by sending an email to us at info@cocoacontrols.com or by contacting us at Cocoa Controls, Red Gate Software Limited, Newnham House, Cambridge Business Park, Cambridge, CB4 0WZ, United Kingdom. You are entitled to ask for a copy of the information we store about you (for which we may charge a small fee).</p>
 
-</div>
-<footer class="container">
+
+    <footer>
 <div class="row">
-<div class="span12">
+<div class="small-12 large-6 columns">
+<div class="row">
+<div class="small-1 columns">
+<i class="icon-twitter icon-2x"></i>
+</div>
+<div class="small-10 columns">
+<p><a href="http://twitter.com/cocoacontrols" target="_blank">Follow @cocoacontrols on Twitter</a></p>
+</div>
+</div>
+<div class="row">
+<div class="small-1 columns">
+<i class="icon-rss icon-2x"></i>
+</div>
+<div class="small-10 columns">
+<p><a href="http://feeds.feedburner.com/cocoacontrols">Subscribe to our RSS feed for the latest site news</a></p>
+</div>
+</div>
+<div class="row">
+<div class="small-1 columns">
+<i class="icon-envelope-alt icon-2x"></i>
+</div>
+<div class="small-10 columns">
 <p>
-<a href="http://twitter.com/cocoacontrols"><img alt="Twitter_icon" src="/assets/twitter_icon-9802f6f472795a7d9f65c0ade65d77f7.png"></a>
-&nbsp;&nbsp;
-<a href="http://feeds.feedburner.com/cocoacontrols"><img alt="Feed_icon" src="/assets/feed_icon-537b4d99f52a3188de957f990bea8ed6.png"></a>
+Subscribe to our Weekly Roundup email:
 </p>
-<p>
-<a href="/terms-and-conditions">Terms &amp; Conditions</a>
-&nbsp;|&nbsp;
-<a href="/privacy-policy">Privacy Policy</a>
-</p>
-<p>© 2011-2013 Cocoa Controls.</p>
-<p>Some third party content, which may be protected by Copyright, reproduced permissively.</p>
+<form class="newsletter_signup_form">
+<input id="newsletter_email_address" name="newsletter_email_address" placeholder="Enter your email address" type="text" value="">
+<button autocomplete="off" class="btn" data-loading-text="One moment...">Subscribe</button>
+<div class="newsletter_signup_result"></div>
+</form>
+</div>
+</div>
+</div>
+<div class="small-12 large-6 columns">
+<p>© 2011-2013 Cocoa Controls. Some third party content, which may be protected by Copyright, reproduced permissively.</p>
+<p><a href="/terms-and-conditions">Terms &amp; Conditions</a> | <a href="/privacy-policy">Privacy Policy</a></p>
 </div>
 </div>
 </footer>
 
-<form accept-charset="UTF-8" action="/controls/new" class="modal-return-submit" id="new_control_github_modal_form" method="get"><div style="margin:0;padding:0;display:inline"><input name="utf8" type="hidden" value="✓"></div>
-<div class="modal hide fade" id="new_control_github_modal">
-<div class="modal-header">
-<button class="close" data-dismiss="modal">×</button>
-<h3>Is this hosted on GitHub?</h3>
-</div>
-<div class="modal-body">
-<p>If this control is hosted on GitHub, paste the address below, otherwise click "Not Hosted on GitHub".</p>
-GitHub URL:
-<input autofocus="autofocus" id="github_url" name="github_url" type="text" value="">
-</div>
-<div class="modal-footer">
-<a href="/controls/new" class="btn">Not Hosted on GitHub</a>
-<button class="btn btn-primary">OK</button>
-</div>
-</div>
-</form>
-
-
-<script type="text/javascript">
+    <script type="text/javascript">
 setTimeout(function(){var a=document.createElement("script");
 var b=document.getElementsByTagName("script")[0];
 a.src=document.location.protocol+"//dnn506yrbagrg.cloudfront.net/pages/scripts/0015/4502.js?"+Math.floor(new Date().getTime()/3600000);
 a.async=true;a.type="text/javascript";b.parentNode.insertBefore(a,b)}, 1);
 </script>
 
-<script type="text/javascript">if (!NREUMQ.f) { NREUMQ.f=function() {
+    
+    <form accept-charset="UTF-8" action="/controls/new" class="modal-return-submit" method="get"><div style="margin:0;padding:0;display:inline"><input name="utf8" type="hidden" value="✓"></div>
+<div class="reveal-modal small" id="new_control_github_modal">
+<a class="close-reveal-modal">×</a>
+<h3>Is this hosted on GitHub?</h3>
+<p>If this control is hosted on GitHub, paste the address below, otherwise click "Not Hosted on GitHub".</p>
+<div class="row">
+<div class="small-3 columns">
+<label class="right inline" for="github_url">GitHub URL:</label>
+</div>
+<div class="small-9 columns">
+<input autofocus="autofocus" id="github_url" name="github_url" type="text" value="">
+</div>
+</div>
+<div class="row">
+<div class="small-12 columns align-right">
+<a href="/controls/new" class="button">Not Hosted on GitHub</a>
+<button class="primary">OK</button>
+</div>
+</div>
+</div>
+</form>
+
+
+  <script type="text/javascript">if (!NREUMQ.f) { NREUMQ.f=function() {
 NREUMQ.push(["load",new Date().getTime()]);
 var e=document.createElement("script");
 e.type="text/javascript";
 e.src=(("http:"===document.location.protocol)?"http:":"https:") + "//" +
-  "d1ros97qkrwjf5.cloudfront.net/42/eum/rum.js";
+  "js-agent.newrelic.com/nr-100.js";
 document.body.appendChild(e);
 if(NREUMQ.a)NREUMQ.a();
 };
 NREUMQ.a=window.onload;window.onload=NREUMQ.f;
 };
-NREUMQ.push(["nrfj","beacon-1.newrelic.com","0cdcfc9bb4","709348","dF1aFkcJDwoASklFBVBXR00dCRcOAEpP",43,346,new Date().getTime(),"","","","",""]);</script>
+NREUMQ.push(["nrfj","beacon-1.newrelic.com","0cdcfc9bb4","709348","dF1aFkcJDwoASklFBVBXR00dCRcOAEpP",11,39,new Date().getTime(),"","","","",""]);</script>
 
-<script type="text/javascript" src="https://d1ros97qkrwjf5.cloudfront.net/42/eum/rum.js"></script></body></html>
+</body></html>
