meetup.com (archived on 2013-12-24)
{
  "alexa_rank": 304,
  "analysis_subcorpus": true,
  "categories": "business;education",
  "char_count": 11290,
  "classifier_probability": 0.96,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 10.39,
  "homepage_snapshot_redirected_domain": "meetup.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20131001161133id_/http://www.meetup.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20131001161133id_/http%3A//meetup.com",
  "interval": "2013_B",
  "link_text": "Privacy",
  "parked_domain": false,
  "phase": "B",
  "policy_domain": "meetup.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20131224232726id_/http%3A//www.meetup.com/privacy",
  "policy_title": "Meetup Privacy Policy Statement - Meetup",
  "policy_url": "meetup.com/privacy",
  "sha1": "0e7696285d40d3431d69cbcc25db2f9d05715b93",
  "simhash": 7853491644062210447,
  "simhash_updated": false,
  "site_hostname": "meetup.com",
  "site_url": "http://meetup.com",
  "smog": NaN,
  "strict_updated": false,
  "timestamp": "20131224232726",
  "word_count": 1817,
  "year": 2013
}

--- a/m/me/mee/meetup.com.html
+++ b/m/me/mee/meetup.com.html
@@ -1,20 +1,23 @@
-<!--The following is the downloaded HTML source of the meetup.com privacy policy that was archived on 2013-06-21.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130621234239id_/http%3A//www.meetup.com/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the meetup.com privacy policy that was archived on 2013-12-24.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131224232726id_/http%3A//www.meetup.com/privacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html xmlns="http://www.w3.org/1999/xhtml" xmlns:fb="http://www.facebook.com/2008/fbml" lang="en"><head>
-<meta http-equiv="X-UA-Compatible" content="IE=8">
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <meta http-equiv="Content-Language" content="en">
 <meta name="verify-v1" content="h5EhuAEkLFlZmMxwpH5wnRaoDEmqYCCEUE+FLcrRNvE=">
 <meta name="google-site-verification" content="FmhaOKLQCq9Y5VrTjq7EthKxjoGU7GFq-4FLT-98ixo">
-<title>Meetup Privacy Policy Statement  - Meetup</title>
 
-<script type="text/javascript"></script>
+<title>Meetup Privacy Policy Statement 
 
-<script src="http://static1.meetupstatic.com/0900269577306649234583/script/Meetup/packed/Meetup.Base.jquery.js" type="text/javascript"></script>
+- Meetup</title>
+
+<script type="text/javascript">(function(){var ERRORS_LOGGED=false;window.onerror=function(msg,file){if(!ERRORS_LOGGED&&file&&file.match(/meetup|facebook/)){ERRORS_LOGGED=true;var err_file=file.split("/").pop().replace(/\W/gi,"_");if(file.split(".").pop()!=="js"){err_file="in_page"}var xhr=new XMLHttpRequest();xhr.open("GET","/api/?method=statsdIncr&arg_error=&arg_key=stats.js.error."+err_file,true);xhr.send()}}})();</script>
+
+<script src="http://static1.meetupstatic.com/56185597881481463948/script/Meetup/packed/Meetup.Base.jquery.js" type="text/javascript" onerror="throw new Error('Meetup Base didn\'t load.')"></script>
 
 
-<script type="text/javascript">Meetup.isSecure=false;var LOG={};LOG.info=function(){return};LOG.error=function(){return};var Member={id:0,name:"",lat:"0.0",lon:"0.0",radius:"50",country:"us",zip:"",isCoord:false,isOrganizingAny:false,twitterAccount:false,status:1,isOwner:false,isCOOrg:false,groupsLink:"http://www.meetup.com/members/0/groups/",groupCount:0,isEvtOrg:false,isMember:false,memberThumb:"http://img2.meetupstatic.com/4385072147488445430168/img/noPhoto_50.gif",isAuthFiltered:false,isVisitor:false,accessToken:"",bio:"",bioTruncatedAndLinkified:"",customTitle:""};var memberId=Member.id;var Chapter={id:0};Meetup.Language="en_US";if(typeof(Meetup.Copy)!="object"){Meetup.Copy={}}Meetup.Copy.CharCounter={};Meetup.Copy.dlogCloseThis="Close this";Meetup.Copy.characterLeft="1 character left";Meetup.Copy.charactersLeft="{NUM_CHARS} characters left";Meetup.Copy.noCharactersLeft="No more characters left.";Meetup.Copy.characterOver="(1 character over)";Meetup.Copy.charactersOver="({NUM_CHARS} characters over)";Meetup.Copy.CharCounter.upToXChars="Up to {CHAR_COUNT} characters.";Meetup.Copy.monthNames=["Jan","Feb","Mar","Apr","May","Jun","Jul","Aug","Sep","Oct","Nov","Dec"];Meetup.Copy.dayNames=["Sun","Mon","Tue","Wed","Thu","Fri","Sat"];if(Meetup.Data===undefined){Meetup.Data={}}Meetup.Data.apiUrl="http://www.meetup.com/api/";Meetup.Data.secureUrl="http://www.meetup.com/";Meetup.Data.secureApiUrl="http://www.meetup.com/api/";Meetup.Data.blankImgUrl="http://img1.meetupstatic.com/6297749526911517292/img/blank.gif";Meetup.Data.nobodyImgUrl="http://img1.meetupstatic.com/501554713870081192606960/img/nobody_50.png";Meetup.Data.path_ajaxtrax="http://www.meetup.com/trax_ajax/";Meetup.URL=Meetup.URLObjectBuilder(undefined);</script>
+<script type="text/javascript">Meetup.isSecure=false;var LOG={};LOG.info=function(){return};LOG.error=function(){return};var Member={id:0,name:"",lat:"0.0",lon:"0.0",radius:"50",country:"us",zip:"",isCoord:false,isOrganizingAny:false,twitterAccount:false,status:1,isOwner:false,isCOOrg:false,groupsLink:"http://www.meetup.com/members/0/groups/",groupCount:0,isEvtOrg:false,isChapterOrg:false,isMember:false,memberThumb:"http://img2.meetupstatic.com/4385072147488445430168/img/noPhoto_50.gif",isAuthFiltered:false,isVisitor:false,accessToken:"",bio:"",bioTruncatedAndLinkified:"",customTitle:""};var memberId=Member.id;var Chapter={id:0};Meetup.Language="en_US";if(typeof(Meetup.Copy)!="object"){Meetup.Copy={}}Meetup.Copy.CharCounter={};Meetup.Copy.dlogCloseThis="Close this";Meetup.Copy.characterLeft="1 character left";Meetup.Copy.charactersLeft="{NUM_CHARS} characters left";Meetup.Copy.noCharactersLeft="No more characters left.";Meetup.Copy.characterOver="(1 character over)";Meetup.Copy.charactersOver="({NUM_CHARS} characters over)";Meetup.Copy.CharCounter.upToXChars="Up to {CHAR_COUNT} characters.";Meetup.Copy.monthNames=["Jan","Feb","Mar","Apr","May","Jun","Jul","Aug","Sep","Oct","Nov","Dec"];Meetup.Copy.dayNames=["Sun","Mon","Tue","Wed","Thu","Fri","Sat"];if(Meetup.Data===undefined){Meetup.Data={}}Meetup.Data.apiUrl="http://www.meetup.com/api/";Meetup.Data.secureUrl="http://www.meetup.com/";Meetup.Data.secureApiUrl="http://www.meetup.com/api/";Meetup.Data.blankImgUrl="http://img1.meetupstatic.com/6297749526911517292/img/blank.gif";Meetup.Data.nobodyImgUrl="http://img1.meetupstatic.com/501554713870081192606960/img/nobody_50.png";Meetup.Data.path_ajaxtrax="http://www.meetup.com/trax_ajax/";namespace("RTF");Meetup.RTF.geocode_using_bing=true;Meetup.URL=Meetup.URLObjectBuilder(undefined);</script>
 
 
 <meta name="keywords" content="group,club,event,community,meetup">
@@ -22,27 +25,28 @@
 
 
 
+
+
 <style id="jsstyle" type="text/css"></style>
 
-<link rel="stylesheet" href="http://static1.meetupstatic.com/241539248307668907658/style/meetup.css" type="text/css">
+<link rel="stylesheet" href="http://static2.meetupstatic.com/33172858648168442837914/style/meetup.css" type="text/css">
 <!--[if IE 6]>
-				<link rel="stylesheet" href="http://static2.meetupstatic.com/669830501378777570/style/sprites_ie.css" type="text/css" />
-			<![endif]-->
+					<link rel="stylesheet" href="http://static1.meetupstatic.com/2558993044962890625/style/sprites_ie.css" type="text/css" />
+				<![endif]-->
 
 <!--[if lt IE 8]>
-		<link rel="stylesheet" href="http://static2.meetupstatic.com/6141773066275095178924/style/base_ie.css" type="text/css" />
+		<link rel="stylesheet" href="http://static2.meetupstatic.com/749795788898997252205/style/base_ie.css" type="text/css" />
 	<![endif]-->
 
-<link rel="stylesheet" type="text/css" media="print" href="http://static2.meetupstatic.com/396449113606625593964/style/print.css">
+<link rel="stylesheet" type="text/css" media="print" href="http://static1.meetupstatic.com/7835960519375095498650/style/print.css">
 
 </head>
 
-
-<!--[if lt IE 7 ]> <body id="meetupBody" class="ie6 hasTopAd"> <![endif]-->
-<!--[if IE 7 ]>  <body id="meetupBody" class="ie7 hasTopAd"> <![endif]-->
-<!--[if IE 8 ]> <body id="meetupBody" class="ie8 hasTopAd"> <![endif]-->
-<!--[if IE 9 ]> <body id="meetupBody" class="ie9 hasTopAd"> <![endif]-->
-<!--[if (gt IE 9)|!(IE)]><!--> <body id="meetupBody" class="hasTopAd hasJS"> <!--<![endif]-->
+<!--[if lt IE 7 ]> <body id="meetupBody" class="ie6 "> <![endif]-->
+<!--[if IE 7 ]>  <body id="meetupBody" class="ie7 "> <![endif]-->
+<!--[if IE 8 ]> <body id="meetupBody" class="ie8 "> <![endif]-->
+<!--[if IE 9 ]> <body id="meetupBody" class="ie9 "> <![endif]-->
+<!--[if (gt IE 9)|!(IE)]><!--> <body id="meetupBody" class="hasJS"> <!--<![endif]-->
 
 <div class="interstitialblock" id="interstitialblock"><!--[if lte IE 6.5]><iframe src="javascript:false;"></iframe><![endif]--></div>
 <script type="text/javascript">document.body.className += (!document.body.className) ? 'hasJS' : ' hasJS';</script>
@@ -89,11 +93,10 @@ background-color: #fffe00;
 
 
 
-
-
 	
 	
-
+	
+	
 	
 	
 		<div class="D_box">
@@ -105,25 +108,33 @@ background-color: #fffe00;
  
  
 
-<div class="D_boxhead">
+
 	
+	
+		<div class="D_boxhead">
+			
 <h1>Meetup Privacy Policy Statement</h1>
 
-</div>
-
-
- 
- 
- 
- 
- 
-
- 
-
-
-
-<div class="D_boxsection ">
+		</div>
 	
+
+
+
+ 
+ 
+ 
+ 
+ 
+
+ 
+
+
+
+
+	
+	
+		<div class="D_boxsection ">
+			
 
 Revision date: May 23, 2010
 <p>Below is our our revised Privacy Policy, which has been updated to reflect our current service offerings. In general, we have added references to a new product called "Meetup Everywhere." The changes to our Privacy Policy are highlighted below.</p>
@@ -195,7 +206,9 @@ New York, NY 10012</p>
 </ul>
 <p>This Privacy Policy is governed by the terms of the Meetup Terms of Service Agreement, including but not limited to Section 17 of such Terms of Service Agreement.</p>
 
-</div>
+		</div>
+	
+
 
 
 
@@ -211,31 +224,20 @@ New York, NY 10012</p>
 
 
 
-
 </div>
+
+
 
 </div><!-- C_context -->
 </div><!-- C_pageBody -->
 
 </div><!-- C_page -->
 <div id="C_header">
-
-<div id="topnav-counter">
-<div class="topnav-counter-text">
-<a class="hit-counter on" href="http://meetup.github.com/stream/rsvpTicker/" target="_blank"><span id="hit-counter-number" class="hit-counter-number">107,045,609</span> <span class="hit-counter-label">RSVPs!</span></a>
-</div>
-<div class="topnav-counter-close">
-<a id="hit-counter-close" href="#">hide</a>
-</div>
-</div>
-
-
-
 <div id="C_headerBody">
 <div id="C_logo">
 
 <a href="http://www.meetup.com/">
-<img src="http://img2.meetupstatic.com/906521611995523788/img/header/logo.png" alt="Meetup">
+<img src="http://img2.meetupstatic.com/9602342981488429316/img/header/logo.png" alt="Meetup">
 </a>
 
 </div>
@@ -247,7 +249,7 @@ New York, NY 10012</p>
 
 <li class="C_userNavItem"><a href="https://secure.meetup.com/login/" class="J_loginLink J_onClick headerLogin">Log in</a></li>
 <li class="C_userNavItem">
-<a class="omnCamp omnrg_signup headerSignup " href="https://secure.meetup.com/quick_reg/">Sign up</a>
+<a class="omnCamp omnrg_signup " href="https://secure.meetup.com/quick_reg/">Sign up</a>
 </li>
 
 </ul>
@@ -288,10 +290,13 @@ a Meetup Group
 
 
 <form id="C_globalSearch" method="get" action="http://www.meetup.com/find/">
-<input type="text" name="keywords" autocomplete="off" id="C_globalSearchInput" class="D_topicSearch" maxlength="100"><input type="image" class="inline" src="http://img2.meetupstatic.com/16125019874654997711/img/header/search_20.png" id="C_globalSearchBtn">
+<input type="text" name="keywords" autocomplete="off" id="C_globalSearchInput" class="D_topicSearch" maxlength="100"><input type="image" class="inline" src="http://img2.meetupstatic.com/53671544414488234/img/header/search_20.png" id="C_globalSearchBtn">
 <input type="submit" style="display:none"> 
 
-<input type="hidden" name="userFreeform" value="">
+<input type="hidden" name="country" value="us">
+<input type="hidden" name="zip" value="94107">
+
+<input type="hidden" name="userFreeform" value="San Francisco, CA, USA">
 <input type="hidden" name="searchfrom" value="topnav">
 <input type="hidden" name="jsCountry" value="us">
 <input type="hidden" name="op" value="search">
@@ -322,6 +327,7 @@ a Meetup Group
 <li><a href="http://nytm.org/made" target="_blank">Made in NYC</a></li>
 <li><a href="http://www.meetup.com/everywhere/">Meetup Everywhere</a></li>
 <li><a href="http://www.meetup.com/perks/" class="omnCamp omnrg_perksfoo">Offer a Perk</a></li>
+
 </ul>
 
 <ul class="unit size1of7 paddedList border-none">
@@ -377,7 +383,7 @@ a Meetup Group
 <div id="dialogHello">
 <div id="helloPanes">
 
-<div id="paneLogin">
+<div id="paneLogin" class="doc-box margin-none">
 
 
 <div class="doc-content rounded-all">
@@ -388,8 +394,11 @@ a Meetup Group
  
  
 
-<div class="D_boxhead">
+
 	
+	
+		<div class="D_boxhead">
+			
 
 <h1>Log in</h1>
 
@@ -400,21 +409,26 @@ Not registered with us yet?
 
 </p>
 
-</div>
-
-
- 
- 
- 
- 
- 
-
- 
-
-
-
-<div class="D_boxsection isMeetup">
+		</div>
 	
+
+
+
+ 
+ 
+ 
+ 
+ 
+
+ 
+
+
+
+
+	
+	
+		<div class="D_boxsection isMeetup">
+			
 
 <form action="https://secure.meetup.com/login/" method="post" id="loginForm" class="loginForm">
 <div>
@@ -477,7 +491,9 @@ Keep me signed in
 </div>
 </form>
 
-</div>
+		</div>
+	
+
 
 
 
@@ -508,7 +524,7 @@ or
 </div>
 
 </div>
-<div id="paneSignup">
+<div id="paneSignup" class="doc-box">
 
 
 
@@ -526,30 +542,38 @@ or
  
  
 
-<div class="D_boxhead">
+
 	
+	
+		<div class="D_boxhead">
+			
 
 <h1>Sign up</h1>
 
 <p class="small">Meetup members, <a href="https://secure.meetup.com/login/" class="J_loginLink J_onClick inHelloLogin">Log in</a></p>
 
 
-</div>
-
-
-
- 
- 
- 
- 
- 
-
- 
-
-
-
-<div class="D_boxsection isMeetup">
+		</div>
 	
+
+
+
+
+ 
+ 
+ 
+ 
+ 
+
+ 
+
+
+
+
+	
+	
+		<div class="D_boxsection isMeetup">
+			
 <form action="https://secure.meetup.com/register/" class="signUp J_signupForm" method="post" id="baseSignUp">
 
 <input type="hidden" name="context" value="site">
@@ -558,10 +582,12 @@ or
 <div class="element margin-bottom">
 <div class="label">
 
-<label class="bold">Your real name</label>
+<label class="bold">Your name</label>
 </div>
 <div class="input">
-<input class="biginput span-75" type="text" name="realname" id="baseSignUp_realname" value="" size="" maxlength="" title="Your real name"></div>
+<input class="biginput span-75 margin-none" type="text" name="realname" id="baseSignUp_realname" value="" size="" maxlength="" title="Your name">
+<div class="small muted">Your name will be public.</div>
+</div>
 </div>
 <div class="element">
 <div class="label">
@@ -570,8 +596,6 @@ or
 </div>
 <div class="input">
 <input class="biginput span-75" type="text" name="email" id="baseSignUp_email" value="" title="Your email">
-
-<span class="explain hideOnValidating">We hate spam too. We won't share your address!</span>
 
 </div>
 </div>
@@ -617,31 +641,39 @@ or
 <input type="hidden" name="urlkey" value="">
 <input type="hidden" name="returnUri" value="">
 </div>
+<span class="tos above-button">
+
+</span>
 
 </div>
 </form>
 
-</div>
-
-
-
-
-
-
-</div>
-
- 
- 
- 
- 
- 
-
- 
-
-
-
-<div class="D_boxsection isFacebook">
+		</div>
 	
+
+
+
+
+
+
+
+</div>
+
+ 
+ 
+ 
+ 
+ 
+
+ 
+
+
+
+
+	
+	
+		<div class="D_boxsection isFacebook">
+			
 
 <div class="orbox">
 <div class="orword">
@@ -660,16 +692,22 @@ or
 
 <div class="tos">
 
-By clicking the "Sign up using Facebook" or "Sign up" buttons above, you agree to Meetup's <a href="http://www.meetup.com/terms/" target="_blank">Terms of Service</a>
-
 </div>
 
 </div>
 
+		</div>
+	
+
+
+
+
+
+<div class="doc-content">
+<p class="small margin-bottom">
+By clicking "Sign up" or "Sign up using Facebook",  you confirm that you accept our <a href="http://www.meetup.com/terms/" target="_blank">Terms of Service</a> &amp; <a href="http://www.meetup.com/privacy/" target="_blank">Privacy Policy</a>
+</p>
 </div>
-
-
-
 
 
 </div>
@@ -691,14 +729,14 @@ By clicking the "Sign up using Facebook" or "Sign up" buttons above, you agree t
 
 
 <script type="text/javascript">
-Meetup.pageName="MEETUP: privacy";
+Meetup.Geo={ICBM:"",lat:"",lon:"",placename:"",region:"",zip:"",country:""};Meetup.pageName="MEETUP: privacy";
 
 </script>
 
 <script type="text/javascript">
 
 connect(window, "onload",function() {
-Meetup.Script.include([ "http://static1.meetupstatic.com/5646318879771124606/script/jquery/Meetup/Validator.js"]
+Meetup.Script.include([ "http://static2.meetupstatic.com/44260622638078200872285/script/jquery/Meetup/Validator.js"]
 
 ,function() {
 
@@ -720,7 +758,7 @@ signupVal.addRule(MUVR.isMinLength, $get(id+"_password"), 6);
 );
 });
 
-$(function(){var start_count=107045609;var velocity=1;var $counter=$("#hit-counter-number");var incrementCount=function(){start_count+=velocity;$counter.html(addCommas(start_count));setTimeout(incrementCount,(Math.random()*1000)+1000)};setTimeout(incrementCount,(Math.random()*1000)+1000);$("#hit-counter-close").click(function(e){e.preventDefault();setCookie("HITCOUNTER","true",60,"/",".meetup.com",false);$("#topnav-counter").remove();$("body").removeClass("hasTopAd")})});$(function(){Meetup.GA.load("alien","","","","")});Meetup.FB.errors=false;if(Meetup.Data===undefined){Meetup.Data={}}Meetup.Data.fbAppKey="2403839689";Meetup.Data.path_api="http://www.meetup.com/api/";Meetup.Data.path_fb_tie="http://www.meetup.com/facebook_account_tie/";Meetup.Data.path_xdpath="http://www.meetup.com/fbconnect/xd.html";Meetup.FB.afterAuthUri="http://www.meetup.com/fb/?loginForm=true";Meetup.FB.returnUri="";
+$(function(){Meetup.GA.load("alien","","","","")});Meetup.FB.errors=false;if(Meetup.Data===undefined){Meetup.Data={}}Meetup.Data.fbAppKey="2403839689";Meetup.Data.path_api="http://www.meetup.com/api/";Meetup.Data.path_fb_tie="http://www.meetup.com/facebook_account_tie/";Meetup.Data.path_xdpath="http://www.meetup.com/fbconnect/xd.html";Meetup.FB.afterAuthUri="http://www.meetup.com/fb/?loginForm=true";Meetup.FB.returnUri="";
 
 </script>
 
